--- a/Makestagram/Storyboards/Base.lproj/Main.storyboard
+++ b/Makestagram/Storyboards/Base.lproj/Main.storyboard
@@ -46,28 +46,9 @@
             </objects>
             <point key="canvasLocation" x="-98" y="690"/>
         </scene>
-        <!--Home View Controller-->
-        <scene sceneID="bcQ-l9-lyg">
-            <objects>
-                <viewController id="r4a-qd-QKU" customClass="HomeViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wTS-vz-Ywm">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Q4M-OI-2hD"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_home_black" id="c2L-Dg-oZP">
-                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="n9f-92-PKa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-97" y="-645"/>
-        </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="Im0-dY-AiV">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dSv-Fo-cIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="KV1-oB-9E4" customClass="MainTabBarController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SV1-BH-sl0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -75,17 +56,27 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="r4a-qd-QKU" kind="relationship" relationship="viewControllers" id="bB4-y4-yxa"/>
+                        <segue destination="pmz-bs-qpJ" kind="relationship" relationship="viewControllers" id="bB4-y4-yxa"/>
                         <segue destination="3Ib-om-G7S" kind="relationship" relationship="viewControllers" id="7fr-yX-vDI"/>
                         <segue destination="Kqa-dv-cQV" kind="relationship" relationship="viewControllers" id="Huo-pA-dgP"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dSv-Fo-cIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1048" y="-123"/>
         </scene>
+        <!--Home-->
+        <scene sceneID="uuI-K9-Dxd">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="pmz-bs-qpJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="MDL-9U-E5Y"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oJW-A6-SST" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-98.400000000000006" y="-645.42728635682158"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="tab_home_black" width="25" height="25"/>
         <image name="tab_plus_black" width="25" height="25"/>
         <image name="tab_profile_black" width="25" height="25"/>
     </resources>
