--- a/Makestagram/Storyboards/Home.storyboard
+++ b/Makestagram/Storyboards/Home.storyboard
@@ -99,6 +99,7 @@
                                                         <constraint firstAttribute="width" secondItem="wzW-2j-9Y7" secondAttribute="height" multiplier="1:1" id="Csz-bO-r1b"/>
                                                     </constraints>
                                                     <state key="normal" image="btn_heart_black_outline"/>
+                                                    <state key="selected" image="btn_heart_red_solid"/>
                                                     <connections>
                                                         <action selector="likeButtonTapped:" destination="1Oh-OM-YXw" eventType="touchUpInside" id="maR-FR-Y5m"/>
                                                     </connections>
@@ -193,6 +194,7 @@
     </scenes>
     <resources>
         <image name="btn_heart_black_outline" width="24" height="24"/>
+        <image name="btn_heart_red_solid" width="24" height="24"/>
         <image name="btn_options_black" width="24" height="24"/>
         <image name="tab_home_black" width="25" height="25"/>
     </resources>
