--- a/Makestagram/Storyboards/Base.lproj/FindFriends.storyboard
+++ b/Makestagram/Storyboards/Base.lproj/FindFriends.storyboard
@@ -28,6 +28,22 @@
             </objects>
             <point key="canvasLocation" x="-98" y="26"/>
         </scene>
+        <!--Find Friends View Controller-->
+        <scene sceneID="kRY-4V-5pt">
+            <objects>
+                <viewController id="Kqa-dv-cQV" customClass="FindFriendsViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jWJ-8z-QWu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="KgZ-go-B9b"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="92c-nN-1M5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s73-3C-sp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="840.79999999999995" y="689.5052473763119"/>
+        </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="Im0-dY-AiV">
             <objects>
@@ -40,7 +56,7 @@
                     <connections>
                         <segue destination="pmz-bs-qpJ" kind="relationship" relationship="viewControllers" id="bB4-y4-yxa"/>
                         <segue destination="3Ib-om-G7S" kind="relationship" relationship="viewControllers" id="7fr-yX-vDI"/>
-                        <segue destination="foj-9G-eVT" kind="relationship" relationship="viewControllers" id="Huo-pA-dgP"/>
+                        <segue destination="bhz-55-hBw" kind="relationship" relationship="viewControllers" id="Huo-pA-dgP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dSv-Fo-cIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -57,18 +73,30 @@
             </objects>
             <point key="canvasLocation" x="-98.400000000000006" y="-645.42728635682158"/>
         </scene>
-        <!--FindFriends-->
-        <scene sceneID="miz-Pn-xfk">
+        <!--Navigation Controller-->
+        <scene sceneID="wu1-Cb-msu">
             <objects>
-                <viewControllerPlaceholder storyboardName="FindFriends" id="foj-9G-eVT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="2nF-kT-8wK"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fdS-pi-HVp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bhz-55-hBw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="2" title="" image="tab_profile_black" id="OzK-QE-mJv">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="C67-r8-rC3">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Kqa-dv-cQV" kind="relationship" relationship="rootViewController" id="sns-BY-fZI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H53-8R-Eq0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-98.400000000000006" y="689.5052473763119"/>
         </scene>
     </scenes>
     <resources>
         <image name="tab_plus_black" width="25" height="25"/>
+        <image name="tab_profile_black" width="25" height="25"/>
     </resources>
 </document>
